nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx-fe
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
