nginx/nginx-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress
spec:
  podSelector:
    matchLabels:
      app: nginx-fe
  policyTypes: 
  - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: order-be
      ports:
        - protocol: TCP
          port: 5678
    - to:
      - podSelector:
          matchLabels:
            app: product-be
      ports:
        - protocol: TCP
          port: 5678
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
